Fixed overlap of modal body on smaller resolutions

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1114,7 +1114,7 @@ body{
       .modal-body{
         position: absolute;
         bottom: 10%;
-        top: 10%;
+        top: 90px;
         left: 0;
         right: 0;
         overflow-y: scroll;
